--- a/helm/charts/bit-broker/Chart.yaml
+++ b/helm/charts/bit-broker/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: bit-broker
-appVersion: 0.1
+appVersion: v0.0.1
 description: Charts for bitbroker deployment. bitbroker is a data brokering platform
-version: 1.0.0
+version: v0.0.1
 home: https://www.bit-broker.io/
 icon: https://www.bit-broker.io/images/logo.png
 sources:
