--- a/helm/charts/bit-broker/values.yaml
+++ b/helm/charts/bit-broker/values.yaml
@@ -26,6 +26,7 @@ global:
   admin:
     name: "Admin"
     email: "noreply@bit-broker.io"
+    organization: "BitBroker"
     jti: "8facd32b-41b0-44e8-a97a-e8b5dc610d46"
     password: "bbkadmin"
 
